Fix gap between sections

--- a/src/components/homePage/address-views/utils/index.module.sass
+++ b/src/components/homePage/address-views/utils/index.module.sass
@@ -61,6 +61,14 @@
       width: 80px
       height: 80px
 
+.SectionsGap
+  display: flex
+  flex-direction: column
+  gap: 2rem
+
+  form
+    display: none
+
 @media ( max-width: $max_mobile_width)
   .About
     p
