--- a/src/components/ntf/NftsLayout.module.sass
+++ b/src/components/ntf/NftsLayout.module.sass
@@ -82,7 +82,6 @@ $label_padding_size: 5px
   background-color: #fff
   padding: 0 $space_large $space_small $space_large
   box-shadow: $shadow
-  margin-bottom: $space_large
   border-radius: $border_radius_normal
   margin-top: $space_tiny
 
