--- a/src/components/table/Table.module.sass
+++ b/src/components/table/Table.module.sass
@@ -37,7 +37,9 @@ $zero_margin: 0
     min-height: 5rem
 
 .CardDivider
-  margin: $space_tiny 0 0 0
+  min-width: 88% !important
+  width: 88%
+  margin: $space_tiny 0 0 46px
 
 .isExpandedCard
   border-bottom: 1px solid #f0f0f0f0 !important
@@ -57,7 +59,6 @@ $zero_margin: 0
   align-items: center
   display: flex
   justify-content: center
-  margin-bottom: $space_large
 
 .BalanceBlock
   background-color: #fff
@@ -296,4 +297,4 @@ $zero_margin: 0
     padding-left: $space_normal
     padding-right: $space_normal
     padding-bottom: $space_normal
-    border-bottom: 1px solid #f0f0f0 
+    border-bottom: 1px solid #f0f0f0
